[gd_scene load_steps=20 format=4 uid="uid://c43vi20226y8j"]

[ext_resource type="Script" path="res://main.gd" id="1_wrrex"]
[ext_resource type="FontFile" uid="uid://chr1vkhpw6yla" path="res://Super Lobster.ttf" id="2_fp0in"]
[ext_resource type="Texture2D" uid="uid://c2p01l4cytw6n" path="res://fish2.png" id="3_suvj6"]
[ext_resource type="Texture2D" uid="uid://bbihk1n4lphjw" path="res://arrow.png" id="4_orxcf"]
[ext_resource type="Texture2D" uid="uid://bnqiywb2kbeum" path="res://water.png" id="4_qx2e4"]
[ext_resource type="Texture2D" uid="uid://i5keolbesqxx" path="res://crosshair.webp" id="6_wka23"]
[ext_resource type="AudioStream" uid="uid://x73p5lcgrf78" path="res://menu.mp3" id="7_ri6ef"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_chkp4"]
bg_color = Color(0.25098, 0.678431, 0.215686, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_neatb"]
atlas = ExtResource("3_suvj6")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctvt6"]
atlas = ExtResource("3_suvj6")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvqch"]
atlas = ExtResource("3_suvj6")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6x6ed"]
atlas = ExtResource("3_suvj6")
region = Rect2(0, 0, 128, 128)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_81gaj"]
bg_color = Color(0.25098, 0.678431, 0.215686, 1)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_t17fd"]
texture = ExtResource("4_qx2e4")
texture_region_size = Vector2i(64, 64)
0:0/animation_columns = 4
0:0/animation_frame_0/duration = 0.4
0:0/animation_frame_1/duration = 0.4
0:0/animation_frame_2/duration = 0.4
0:0/animation_frame_3/duration = 0.4
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_j5jyr"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_t17fd")

[sub_resource type="AtlasTexture" id="AtlasTexture_per1e"]
atlas = ExtResource("3_suvj6")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ms43"]
atlas = ExtResource("3_suvj6")
region = Rect2(0, 0, 128, 128)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8eo82"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color(0.25098, 0.678431, 0.215686, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jla7c"]
bg_color = Color(1, 1, 1, 1)

[node name="Main" type="Node2D"]
script = ExtResource("1_wrrex")

[node name="MenuNode" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="MenuNode"]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.25098, 0.678431, 0.215686, 1)

[node name="MainMenuContainer" type="MarginContainer" parent="MenuNode"]
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 80

[node name="HBoxContainer" type="HBoxContainer" parent="MenuNode/MainMenuContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MenuNode/MainMenuContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="MenuNode/MainMenuContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_fp0in")
theme_override_font_sizes/font_size = 130
text = "Fishing Frenzy! "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="MenuNode/MainMenuContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_fp0in")
theme_override_font_sizes/font_size = 30
text = "Group 3 | Rutgers COGS | Spring 2025"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightSide" type="VBoxContainer" parent="MenuNode/MainMenuContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="MenuNode/MainMenuContainer/HBoxContainer/RightSide"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 150
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 150

[node name="Buttons" type="VBoxContainer" parent="MenuNode/MainMenuContainer/HBoxContainer/RightSide/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="StartGame" type="Button" parent="MenuNode/MainMenuContainer/HBoxContainer/RightSide/MarginContainer/Buttons"]
layout_mode = 2
focus_neighbor_top = NodePath("../FishLibrary")
focus_neighbor_bottom = NodePath("../Rules")
focus_next = NodePath("../Rules")
focus_previous = NodePath("../FishLibrary")
theme_override_fonts/font = ExtResource("2_fp0in")
theme_override_font_sizes/font_size = 75
text = "Start Game"

[node name="Rules" type="Button" parent="MenuNode/MainMenuContainer/HBoxContainer/RightSide/MarginContainer/Buttons"]
layout_mode = 2
focus_neighbor_top = NodePath("../StartGame")
focus_neighbor_bottom = NodePath("../FishLibrary")
focus_next = NodePath("../FishLibrary")
focus_previous = NodePath("../StartGame")
theme_override_fonts/font = ExtResource("2_fp0in")
theme_override_font_sizes/font_size = 75
text = "How to Play"

[node name="FishLibrary" type="Button" parent="MenuNode/MainMenuContainer/HBoxContainer/RightSide/MarginContainer/Buttons"]
layout_mode = 2
focus_neighbor_top = NodePath("../Rules")
focus_neighbor_bottom = NodePath("../StartGame")
focus_next = NodePath("../StartGame")
focus_previous = NodePath("../Rules")
theme_override_fonts/font = ExtResource("2_fp0in")
theme_override_font_sizes/font_size = 75
text = "Fish Library"

[node name="FishLibraryNode" type="Node2D" parent="."]
visible = false
metadata/_edit_lock_ = true

[node name="MainMenuContainer" type="MarginContainer" parent="FishLibraryNode"]
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 80

[node name="ColorRect" type="ColorRect" parent="FishLibraryNode/MainMenuContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="FishLibraryNode/MainMenuContainer"]
layout_mode = 2
theme_override_constants/margin_left = 125
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 125
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="FishLibraryNode/MainMenuContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="FishLibraryNode/MainMenuContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_fp0in")
theme_override_font_sizes/font_size = 120
theme_override_styles/normal = SubResource("StyleBoxFlat_chkp4")
text = "Fish Library"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainContainer" type="HBoxContainer" parent="FishLibraryNode/MainMenuContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="FishLibraryNode/MainMenuContainer/MarginContainer/VBoxContainer/MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="FishLibraryNode/MainMenuContainer/MarginContainer/VBoxContainer/MainContainer/VBoxContainer"]
modulate = Color(0.898039, 0.67451, 0.227451, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("2_fp0in")
theme_override_font_sizes/font_size = 60
text = "Legendary"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="FishLibraryNode/MainMenuContainer/MarginContainer/VBoxContainer/MainContainer/VBoxContainer"]
modulate = Color(0.898039, 0.67451, 0.227451, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("2_fp0in")
theme_override_font_sizes/font_size = 60
text = "100 Coins"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="FishLibraryNode/MainMenuContainer/MarginContainer/VBoxContainer/MainContainer/VBoxContainer"]
modulate = Color(0.25098, 0.678431, 0.215686, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("2_fp0in")
theme_override_font_sizes/font_size = 40
text = "
Great White Shark
Coelacanth
Treasure Chest
Dolphin
Humpback Whale

"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="FishLibraryNode/MainMenuContainer/MarginContainer/VBoxContainer/MainContainer/VBoxContainer"]
modulate = Color(0.898039, 0.67451, 0.227451, 1)
layout_mode = 2
size_flags_vertical = 3
texture = SubResource("AtlasTexture_neatb")
stretch_mode = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="FishLibraryNode/MainMenuContainer/MarginContainer/VBoxContainer/MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="Label2" type="Label" parent="FishLibraryNode/MainMenuContainer/MarginContainer/VBoxContainer/MainContainer/VBoxContainer2"]
modulate = Color(0.760784, 0.360784, 0.866667, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("2_fp0in")
theme_override_font_sizes/font_size = 60
text = "Epic"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="FishLibraryNode/MainMenuContainer/MarginContainer/VBoxContainer/MainContainer/VBoxContainer2"]
modulate = Color(0.760784, 0.360784, 0.866667, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("2_fp0in")
theme_override_font_sizes/font_size = 60
text = "50 Coins"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="FishLibraryNode/MainMenuContainer/MarginContainer/VBoxContainer/MainContainer/VBoxContainer2"]
modulate = Color(0.25098, 0.678431, 0.215686, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("2_fp0in")
theme_override_font_sizes/font_size = 40
text = "
Oarfish
Wobbegong
Tuna
Black Marlin
Scorpionfish
 "
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="FishLibraryNode/MainMenuContainer/MarginContainer/VBoxContainer/MainContainer/VBoxContainer2"]
modulate = Color(0.760784, 0.360784, 0.866667, 1)
layout_mode = 2
size_flags_vertical = 3
texture = SubResource("AtlasTexture_ctvt6")
stretch_mode = 3

[node name="VBoxContainer3" type="VBoxContainer" parent="FishLibraryNode/MainMenuContainer/MarginContainer/VBoxContainer/MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="Label3" type="Label" parent="FishLibraryNode/MainMenuContainer/MarginContainer/VBoxContainer/MainContainer/VBoxContainer3"]
modulate = Color(0.207843, 0.580392, 0.898039, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("2_fp0in")
theme_override_font_sizes/font_size = 60
text = "Rare"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label5" type="Label" parent="FishLibraryNode/MainMenuContainer/MarginContainer/VBoxContainer/MainContainer/VBoxContainer3"]
modulate = Color(0.207843, 0.580392, 0.898039, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("2_fp0in")
theme_override_font_sizes/font_size = 60
text = "25 Coins"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="FishLibraryNode/MainMenuContainer/MarginContainer/VBoxContainer/MainContainer/VBoxContainer3"]
modulate = Color(0.25098, 0.678431, 0.215686, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("2_fp0in")
theme_override_font_sizes/font_size = 40
text = "
Northern Stargazer
African Glass Catfish
Sea Bream
European Squid
Flounder
 "
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="FishLibraryNode/MainMenuContainer/MarginContainer/VBoxContainer/MainContainer/VBoxContainer3"]
modulate = Color(0.207843, 0.580392, 0.898039, 1)
layout_mode = 2
size_flags_vertical = 3
texture = SubResource("AtlasTexture_rvqch")
stretch_mode = 3

[node name="VBoxContainer4" type="VBoxContainer" parent="FishLibraryNode/MainMenuContainer/MarginContainer/VBoxContainer/MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="Label4" type="Label" parent="FishLibraryNode/MainMenuContainer/MarginContainer/VBoxContainer/MainContainer/VBoxContainer4"]
modulate = Color(0.627451, 0.627451, 0.627451, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("2_fp0in")
theme_override_font_sizes/font_size = 60
text = "Common"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label6" type="Label" parent="FishLibraryNode/MainMenuContainer/MarginContainer/VBoxContainer/MainContainer/VBoxContainer4"]
modulate = Color(0.627451, 0.627451, 0.627451, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("2_fp0in")
theme_override_font_sizes/font_size = 60
text = "15 Coins"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label5" type="Label" parent="FishLibraryNode/MainMenuContainer/MarginContainer/VBoxContainer/MainContainer/VBoxContainer4"]
modulate = Color(0.25098, 0.678431, 0.215686, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("2_fp0in")
theme_override_font_sizes/font_size = 40
text = "
Coho Salmon
Moray Eel
Striped Bass
Prawn
Umbrella
 "
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="FishLibraryNode/MainMenuContainer/MarginContainer/VBoxContainer/MainContainer/VBoxContainer4"]
modulate = Color(0.627451, 0.627451, 0.627451, 1)
layout_mode = 2
size_flags_vertical = 3
texture = SubResource("AtlasTexture_6x6ed")
stretch_mode = 3

[node name="Close" type="Button" parent="FishLibraryNode"]
offset_left = 1688.0
offset_top = 90.0
offset_right = 1719.0
offset_bottom = 121.0
scale = Vector2(3.24, 3.24)
text = "X"

[node name="RulesNode" type="Node2D" parent="."]
visible = false
metadata/_edit_lock_ = true

[node name="MainMenuContainer" type="MarginContainer" parent="RulesNode"]
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 80

[node name="ColorRect" type="ColorRect" parent="RulesNode/MainMenuContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="RulesNode/MainMenuContainer"]
layout_mode = 2
theme_override_constants/margin_left = 125
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 125
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="RulesNode/MainMenuContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="RulesNode/MainMenuContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_fp0in")
theme_override_font_sizes/font_size = 120
theme_override_styles/normal = SubResource("StyleBoxFlat_81gaj")
text = "How to Play"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainContainer" type="HBoxContainer" parent="RulesNode/MainMenuContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="RulesNode/MainMenuContainer/MarginContainer/VBoxContainer/MainContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="RulesNode/MainMenuContainer/MarginContainer/VBoxContainer/MainContainer/VBoxContainer"]
modulate = Color(0.25098, 0.678431, 0.215686, 1)
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_fp0in")
theme_override_font_sizes/font_size = 75
text = "Hooking the Fish"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="RulesNode/MainMenuContainer/MarginContainer/VBoxContainer/MainContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="Water" type="TileMapLayer" parent="RulesNode/MainMenuContainer/MarginContainer/VBoxContainer/MainContainer/VBoxContainer/MarginContainer"]
position = Vector2(255, 0)
scale = Vector2(0.985, 0.985)
tile_map_data = PackedByteArray("AAD9/wAAAAAAAAAAAAD9/wEAAAAAAAAAAAD9/wIAAAAAAAAAAAD9/wMAAAAAAAAAAAD9/wQAAAAAAAAAAAD+/wAAAAAAAAAAAAD+/wEAAAAAAAAAAAD+/wIAAAAAAAAAAAD+/wMAAAAAAAAAAAD+/wQAAAAAAAAAAAD//wAAAAAAAAAAAAD//wEAAAAAAAAAAAD//wIAAAAAAAAAAAD//wMAAAAAAAAAAAD//wQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAABAAAAAAAAAAAAAAABAAEAAAAAAAAAAAABAAIAAAAAAAAAAAABAAMAAAAAAAAAAAABAAQAAAAAAAAAAAACAAAAAAAAAAAAAAACAAEAAAAAAAAAAAACAAIAAAAAAAAAAAACAAMAAAAAAAAAAAACAAQAAAAAAAAAAAADAAAAAAAAAAAAAAADAAEAAAAAAAAAAAADAAIAAAAAAAAAAAADAAMAAAAAAAAAAAADAAQAAAAAAAAAAAAEAAAAAAAAAAAAAAAEAAEAAAAAAAAAAAAEAAIAAAAAAAAAAAAEAAMAAAAAAAAAAAAEAAQAAAAAAAAAAAAFAAAAAAAAAAAAAAAFAAEAAAAAAAAAAAAFAAIAAAAAAAAAAAAFAAMAAAAAAAAAAAAFAAQAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_j5jyr")

[node name="FishSprite" type="Sprite2D" parent="RulesNode/MainMenuContainer/MarginContainer/VBoxContainer/MainContainer/VBoxContainer/MarginContainer"]
modulate = Color(0.207843, 0.580392, 0.898039, 1)
position = Vector2(145, 99)
scale = Vector2(0.796875, 0.796875)
texture = SubResource("AtlasTexture_per1e")

[node name="FishSprite2" type="Sprite2D" parent="RulesNode/MainMenuContainer/MarginContainer/VBoxContainer/MainContainer/VBoxContainer/MarginContainer"]
modulate = Color(0.898039, 0.67451, 0.227451, 1)
position = Vector2(539, 253)
scale = Vector2(0.796875, 0.796875)
texture = SubResource("AtlasTexture_8ms43")
flip_h = true

[node name="FishSprite3" type="Sprite2D" parent="RulesNode/MainMenuContainer/MarginContainer/VBoxContainer/MainContainer/VBoxContainer/MarginContainer"]
position = Vector2(348, 180)
scale = Vector2(0.362723, 0.362723)
texture = ExtResource("6_wka23")

[node name="Label2" type="Label" parent="RulesNode/MainMenuContainer/MarginContainer/VBoxContainer/MainContainer/VBoxContainer"]
modulate = Color(0.25098, 0.678431, 0.215686, 1)
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_fp0in")
theme_override_font_sizes/font_size = 35
text = "Use the left joystick to aim your hook. Once you are ready,  cast it into the water. If you successfully capture a fish, be ready to reel it in. If not, try again!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="RulesNode/MainMenuContainer/MarginContainer/VBoxContainer/MainContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="RulesNode/MainMenuContainer/MarginContainer/VBoxContainer/MainContainer/VBoxContainer2"]
modulate = Color(0.25098, 0.678431, 0.215686, 1)
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_fp0in")
theme_override_font_sizes/font_size = 75
text = "Reeling it In"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="RulesNode/MainMenuContainer/MarginContainer/VBoxContainer/MainContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="HBoxContainer" type="HBoxContainer" parent="RulesNode/MainMenuContainer/MarginContainer/VBoxContainer/MainContainer/VBoxContainer2/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="RulesNode/MainMenuContainer/MarginContainer/VBoxContainer/MainContainer/VBoxContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="RulesNode/MainMenuContainer/MarginContainer/VBoxContainer/MainContainer/VBoxContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ProgressBar2" type="PanelContainer" parent="RulesNode/MainMenuContainer/MarginContainer/VBoxContainer/MainContainer/VBoxContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_8eo82")

[node name="RarityHolder" type="VBoxContainer" parent="RulesNode/MainMenuContainer/MarginContainer/VBoxContainer/MainContainer/VBoxContainer2/MarginContainer/HBoxContainer/ProgressBar2"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Common" type="Panel" parent="RulesNode/MainMenuContainer/MarginContainer/VBoxContainer/MainContainer/VBoxContainer2/MarginContainer/HBoxContainer/ProgressBar2/RarityHolder"]
modulate = Color(0.625597, 0.625597, 0.625597, 1)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4
theme_override_styles/panel = SubResource("StyleBoxFlat_jla7c")

[node name="Rare" type="Panel" parent="RulesNode/MainMenuContainer/MarginContainer/VBoxContainer/MainContainer/VBoxContainer2/MarginContainer/HBoxContainer/ProgressBar2/RarityHolder"]
modulate = Color(0.207087, 0.581242, 0.89822, 1)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
theme_override_styles/panel = SubResource("StyleBoxFlat_jla7c")

[node name="Epic" type="Panel" parent="RulesNode/MainMenuContainer/MarginContainer/VBoxContainer/MainContainer/VBoxContainer2/MarginContainer/HBoxContainer/ProgressBar2/RarityHolder"]
modulate = Color(0.76204, 0.361323, 0.865161, 1)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
theme_override_styles/panel = SubResource("StyleBoxFlat_jla7c")

[node name="Legendary" type="Panel" parent="RulesNode/MainMenuContainer/MarginContainer/VBoxContainer/MainContainer/VBoxContainer2/MarginContainer/HBoxContainer/ProgressBar2/RarityHolder"]
modulate = Color(0.899351, 0.673612, 0.228508, 1)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
theme_override_styles/panel = SubResource("StyleBoxFlat_jla7c")

[node name="VBoxContainer4" type="VBoxContainer" parent="RulesNode/MainMenuContainer/MarginContainer/VBoxContainer/MainContainer/VBoxContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="RulesNode/MainMenuContainer/MarginContainer/VBoxContainer/MainContainer/VBoxContainer2/MarginContainer/HBoxContainer/VBoxContainer4"]
layout_mode = 2
size_flags_vertical = 3

[node name="ArrowStart" type="TextureRect" parent="RulesNode/MainMenuContainer/MarginContainer/VBoxContainer/MainContainer/VBoxContainer2/MarginContainer/HBoxContainer/VBoxContainer4"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("4_orxcf")
expand_mode = 1
flip_h = true

[node name="HBoxContainer2" type="HBoxContainer" parent="RulesNode/MainMenuContainer/MarginContainer/VBoxContainer/MainContainer/VBoxContainer2/MarginContainer/HBoxContainer/VBoxContainer4"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer3" type="VBoxContainer" parent="RulesNode/MainMenuContainer/MarginContainer/VBoxContainer/MainContainer/VBoxContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label3" type="Label" parent="RulesNode/MainMenuContainer/MarginContainer/VBoxContainer/MainContainer/VBoxContainer2"]
modulate = Color(0.25098, 0.678431, 0.215686, 1)
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_fp0in")
theme_override_font_sizes/font_size = 35
text = "After you have hooked your fish, time your catch in the bar to the side. The better your timing, the better your catch! Exclusive fish are worth more coins."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Label2" type="Label" parent="RulesNode/MainMenuContainer/MarginContainer/VBoxContainer"]
modulate = Color(0.25098, 0.678431, 0.215686, 1)
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_fp0in")
theme_override_font_sizes/font_size = 49
text = "The player with the highest amount of coins at the end wins!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Close" type="Button" parent="RulesNode"]
offset_left = 1688.0
offset_top = 90.0
offset_right = 1719.0
offset_bottom = 121.0
scale = Vector2(3.24, 3.24)
theme_override_font_sizes/font_size = 20
text = "X"

[node name="MenuAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_ri6ef")
volume_db = 5.0
autoplay = true
